--- a/app/src/main/res/layout/activity_identify.xml
+++ b/app/src/main/res/layout/activity_identify.xml
@@ -1,27 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:weightSum="10"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/mylayout"
     tools:context=".IdentifyActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolBar_IDENTIFYACTIVITY"
         android:background="#ce4656"
         android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:layout_height="0dp"/>
+        android:layout_height="?attr/actionBarSize"/>
 
 
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="8"
+        android:layout_height="match_parent"
 
         android:id="@+id/imageview_IDENTIFYACTIVITY"/>
 
-</LinearLayout>
+</RelativeLayout>
