--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,28 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:weightSum="7"
     tools:context=".MainActivity">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolBar_IDENTIFYACTIVITY"
+
+        android:background="#ce4656"
+
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"/>
+
+
+    <ViewFlipper
+        android:id="@+id/viewflipper"
+        android:layout_weight="3"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:autoStart="true"
+        android:flipInterval="3000" >
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/cho1" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/cho2" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/cho3" />
+
+    </ViewFlipper>
+
 
     <Button
         android:id="@+id/btn_TAKEPICTURE"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Take Picture"
-        tools:layout_editor_absoluteX="51dp"
-        tools:layout_editor_absoluteY="49dp" />
+        android:layout_marginTop="50dp"
+        android:layout_weight="1"
+        android:layout_width="300dp"
+        android:layout_marginLeft="150dp"
+        android:layout_height="0dp"
+        android:textColor="#961212"
+        android:textSize="10pt"
+        android:text="Take A Picture" />
 
     <Button
         android:id="@+id/btn_CHOOSEPICTURE"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="60dp"
-        android:text="Choose Picture"
-        tools:layout_editor_absoluteX="51dp"
-        tools:layout_editor_absoluteY="49dp" />
+        android:textColor="#961212"
+        android:textSize="10pt"
+        android:layout_marginTop="50dp"
+        android:layout_width="300dp"
+        android:layout_marginLeft="150dp"
+        android:layout_weight="1"
 
-</RelativeLayout>
+        android:layout_height="0dp"
+        android:text="Choose From Gallery" />
+
+</LinearLayout>
