--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,8 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolBar_IDENTIFYACTIVITY"
-
         android:background="#ce4656"
-
+        android:layout_gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"/>
 
@@ -47,8 +46,8 @@
         android:id="@+id/btn_TAKEPICTURE"
         android:layout_marginTop="50dp"
         android:layout_weight="1"
+        android:layout_gravity="center_horizontal"
         android:layout_width="300dp"
-        android:layout_marginLeft="150dp"
         android:layout_height="0dp"
         android:textColor="#961212"
         android:textSize="10pt"
@@ -57,10 +56,10 @@
     <Button
         android:id="@+id/btn_CHOOSEPICTURE"
         android:textColor="#961212"
+        android:layout_gravity="center_horizontal"
         android:textSize="10pt"
         android:layout_marginTop="50dp"
         android:layout_width="300dp"
-        android:layout_marginLeft="150dp"
         android:layout_weight="1"
 
         android:layout_height="0dp"
