--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,28 +28,42 @@
         <ImageView
             android:id="@+id/imageViewResult"
             android:layout_width="75dp"
+
             android:layout_height="75dp"
             android:padding="2dp" />
 
-        <TextView
-            android:id="@+id/textViewResult"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:fadeScrollbars="false"
-            android:gravity="center"
-            android:maxLines="15"
-            android:scrollbars="vertical"
-            android:textColor="@android:color/black" />
+
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/textViewResult"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:fadeScrollbars="false"
+        android:maxLines="15"
+        android:layout_marginBottom="120dp"
+        android:layout_gravity="bottom|center"
+        android:scrollbars="vertical"
+        android:textColor="@android:color/black" />
+
+    <Button
+        android:id="@+id/btnMoreInfo"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_gravity="bottom|center"
+        android:text="More"
+        android:layout_marginBottom="80dp"
+        android:textAllCaps="false"
+        android:textColor="@android:color/black"
+        />
 
     <Button
         android:id="@+id/btnToggleCamera"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_gravity="bottom|center"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="60dp"
         android:text="Toggle Camera"
         android:textAllCaps="false"
         android:textColor="@android:color/black" />
