--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,46 +36,56 @@
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/textViewResult"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:fadeScrollbars="false"
-        android:maxLines="15"
-        android:layout_marginBottom="120dp"
-        android:layout_gravity="bottom|center"
-        android:scrollbars="vertical"
-        android:textColor="@android:color/black" />
 
-    <Button
-        android:id="@+id/btnMoreInfo"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_gravity="bottom|center"
-        android:text="More"
-        android:layout_marginBottom="80dp"
-        android:textAllCaps="false"
-        android:textColor="@android:color/black"
-        />
+        android:layout_marginTop="400dp"
+        android:orientation="vertical"
+        android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/textViewResult"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:fadeScrollbars="false"
+            android:maxLines="15"
+            android:textAlignment="center"
 
-    <Button
-        android:id="@+id/btnToggleCamera"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_gravity="bottom|center"
-        android:layout_marginBottom="60dp"
-        android:text="Toggle Camera"
-        android:textAllCaps="false"
-        android:textColor="@android:color/black" />
+            android:layout_gravity="bottom|center"
+            android:scrollbars="vertical"
+            android:textColor="@android:color/black" />
 
-    <Button
-        android:id="@+id/btnDetectObject"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_gravity="bottom|center"
-        android:text="Detect"
-        android:textAllCaps="false"
-        android:textColor="@android:color/black"
-        android:visibility="gone" />
+        <Button
+            android:id="@+id/btnMoreInfo"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_gravity="bottom|center"
+            android:text="More"
+
+            android:textAllCaps="false"
+            android:textColor="@android:color/black"
+            />
+
+        <Button
+            android:id="@+id/btnToggleCamera"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_gravity="bottom|center"
+
+            android:text="Toggle Camera"
+            android:textAllCaps="false"
+            android:textColor="@android:color/black" />
+
+        <Button
+            android:id="@+id/btnDetectObject"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_gravity="bottom|center"
+            android:text="Detect"
+            android:textAllCaps="false"
+            android:textColor="@android:color/black"
+            android:visibility="gone" />
+
+
+    </LinearLayout>
 
 </FrameLayout>
